# informatica

./: Dockerfile  README.md  app.py  html_templates.py  pyproject.toml  streamhandler.py
static/: logo.psd
